add buttons with :hover effect

--- a/index.html
+++ b/index.html
@@ -7,12 +7,24 @@
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
-        <header>
+        <header class="bgc-white">
             <div class="author">
                 <img id="logo" src="./assets/img/Logo.png" alt="logo">
                 <strong class="title">Toboolist</strong>
             </div>
         </header>
-        <main></main>
+        <!-- /header -->
+
+        <main class="bgc-white">
+            <section id="buttons">
+                <div class="container">
+
+                    <button class="bgc-white">Add Task</button>
+                    <button class="bgc-white">Add Section</button>
+                </div>
+            </section>
+            <!-- /#buttons -->
+            
+        </main>
     </body>
 </html>
