add task template to replicate in the next sections

--- a/index.html
+++ b/index.html
@@ -24,7 +24,20 @@
                 </div>
             </section>
             <!-- /#buttons -->
-            
+
+            <section id="tasks">
+
+                <div class="task_importance">
+                    <span class="triangle_down">&#128899;</span> New Task
+                </div>
+
+                <div class="task_description">
+                    <span class="check">&check;</span>
+                    Quarterly Newsletter
+                    <span class="tag editorial">Editorial</span>
+                </div>
+
+            </section>
         </main>
     </body>
 </html>
