add today tasks

--- a/index.html
+++ b/index.html
@@ -25,17 +25,68 @@
             </section>
             <!-- /#buttons -->
 
-            <section id="tasks">
 
-                <div class="task_importance">
-                    <span class="triangle_down">&#128899;</span> New Task
-                </div>
 
-                <div class="task_description">
-                    <span class="check">&check;</span>
-                    Quarterly Newsletter
-                    <span class="tag editorial">Editorial</span>
+
+
+            <section id="to_do_list">
+
+                <div class="tasks">
+                    <div class="task_importance">
+                        <span class="triangle_down">&#128899;</span> New Task
+                    </div>
+
+                    <div class="task_description">
+                        <span class="check">&check;</span>
+                        Quarterly Newsletter
+                        <span class="tag editorial">Editorial</span>
+                    </div>
                 </div>
+                <!-- /new task -->
+
+                <div class="tasks">
+                    <div class="task_importance">
+                        <span class="triangle_down">&#128899;</span> Today
+                    </div>
+
+                    <div class="task_description">
+                        <span class="check">&check;</span>
+                        Recruiting blog post
+                        <span class="tag editorial">Editorial</span>
+                    </div>
+
+                    <div class="task_description">
+                        <span class="check">&check;</span>
+                        Mobile App Launch
+                        <span class="tag q1goals">Q1 Goals</span>
+                    </div>
+
+                    <div class="task_description">
+                        <span class="cross">&cross;</span>
+                        Interview John H.
+                        <span class="tag recruiting">Recruiting</span>
+                    </div>
+
+                    <div class="task_description">
+                        <span class="check">&check;</span>
+                        Summit update to mobile storefronts
+                        <span class="tag mobile">Mobile</span>
+                    </div>
+                </div>
+                <!-- /today -->
+
+
+
+
+
+
+
+
+
+
+
+
+
 
             </section>
         </main>
