add upcoming tasks

--- a/index.html
+++ b/index.html
@@ -25,10 +25,6 @@
             </section>
             <!-- /#buttons -->
 
-
-
-
-
             <section id="to_do_list">
 
                 <div class="tasks">
@@ -75,18 +71,35 @@
                 </div>
                 <!-- /today -->
 
+                <div class="tasks">
+                    <div class="task_importance">
+                        <span class="triangle_down">&#128899;</span> Upcoming
+                    </div>
 
+                    <div class="task_description">
+                        <span class="cross">&cross;</span>
+                        Schedule meeting with Alex
+                    </div>
 
+                    <div class="task_description">
+                        <span class="check">&check;</span>
+                        Homepage Refresh
+                        <span class="tag website">Website</span>
+                    </div>
 
+                    <div class="task_description">
+                        <span class="check">&check;</span>
+                        Onboard new Sales team members
+                        <span class="tag sales">Sales</span>
+                    </div>
 
-
-
-
-
-
-
-
-
+                    <div class="task_description">
+                        <span class="check">&check;</span>
+                        Review editorial calendar
+                        <span class="tag editorial">Editorial</span>
+                    </div>
+                </div>
+                <!-- /upcoming -->
 
             </section>
         </main>
