add container div to tasks to center them

--- a/index.html
+++ b/index.html
@@ -26,81 +26,83 @@
             <!-- /#buttons -->
 
             <section id="to_do_list">
+                <div class="container">
+                    <div class="tasks">
+                        <div class="task_importance">
+                            <span class="triangle_down">&#128899;</span> New
+                            Task
+                        </div>
 
-                <div class="tasks">
-                    <div class="task_importance">
-                        <span class="triangle_down">&#128899;</span> New Task
+                        <div class="task_description">
+                            <span class="check">&check;</span>
+                            Quarterly Newsletter
+                            <span class="tag editorial">Editorial</span>
+                        </div>
                     </div>
+                    <!-- /new task -->
 
-                    <div class="task_description">
-                        <span class="check">&check;</span>
-                        Quarterly Newsletter
-                        <span class="tag editorial">Editorial</span>
+                    <div class="tasks">
+                        <div class="task_importance">
+                            <span class="triangle_down">&#128899;</span> Today
+                        </div>
+
+                        <div class="task_description">
+                            <span class="check">&check;</span>
+                            Recruiting blog post
+                            <span class="tag editorial">Editorial</span>
+                        </div>
+
+                        <div class="task_description">
+                            <span class="check">&check;</span>
+                            Mobile App Launch
+                            <span class="tag q1goals">Q1 Goals</span>
+                        </div>
+
+                        <div class="task_description">
+                            <span class="cross">&cross;</span>
+                            Interview John H.
+                            <span class="tag recruiting">Recruiting</span>
+                        </div>
+
+                        <div class="task_description">
+                            <span class="check">&check;</span>
+                            Summit update to mobile storefronts
+                            <span class="tag mobile">Mobile</span>
+                        </div>
                     </div>
+                    <!-- /today -->
+
+                    <div class="tasks">
+                        <div class="task_importance">
+                            <span class="triangle_down">&#128899;</span>
+                            Upcoming
+                        </div>
+
+                        <div class="task_description">
+                            <span class="cross">&cross;</span>
+                            Schedule meeting with Alex
+                        </div>
+
+                        <div class="task_description">
+                            <span class="check">&check;</span>
+                            Homepage Refresh
+                            <span class="tag website">Website</span>
+                        </div>
+
+                        <div class="task_description">
+                            <span class="check">&check;</span>
+                            Onboard new Sales team members
+                            <span class="tag sales">Sales</span>
+                        </div>
+
+                        <div class="task_description">
+                            <span class="check">&check;</span>
+                            Review editorial calendar
+                            <span class="tag editorial">Editorial</span>
+                        </div>
+                    </div>
+                    <!-- /upcoming -->
                 </div>
-                <!-- /new task -->
-
-                <div class="tasks">
-                    <div class="task_importance">
-                        <span class="triangle_down">&#128899;</span> Today
-                    </div>
-
-                    <div class="task_description">
-                        <span class="check">&check;</span>
-                        Recruiting blog post
-                        <span class="tag editorial">Editorial</span>
-                    </div>
-
-                    <div class="task_description">
-                        <span class="check">&check;</span>
-                        Mobile App Launch
-                        <span class="tag q1goals">Q1 Goals</span>
-                    </div>
-
-                    <div class="task_description">
-                        <span class="cross">&cross;</span>
-                        Interview John H.
-                        <span class="tag recruiting">Recruiting</span>
-                    </div>
-
-                    <div class="task_description">
-                        <span class="check">&check;</span>
-                        Summit update to mobile storefronts
-                        <span class="tag mobile">Mobile</span>
-                    </div>
-                </div>
-                <!-- /today -->
-
-                <div class="tasks">
-                    <div class="task_importance">
-                        <span class="triangle_down">&#128899;</span> Upcoming
-                    </div>
-
-                    <div class="task_description">
-                        <span class="cross">&cross;</span>
-                        Schedule meeting with Alex
-                    </div>
-
-                    <div class="task_description">
-                        <span class="check">&check;</span>
-                        Homepage Refresh
-                        <span class="tag website">Website</span>
-                    </div>
-
-                    <div class="task_description">
-                        <span class="check">&check;</span>
-                        Onboard new Sales team members
-                        <span class="tag sales">Sales</span>
-                    </div>
-
-                    <div class="task_description">
-                        <span class="check">&check;</span>
-                        Review editorial calendar
-                        <span class="tag editorial">Editorial</span>
-                    </div>
-                </div>
-                <!-- /upcoming -->
-
             </section>
         </main>
     </body>
