adjust some details
change the body color background a little darker to see better the difference between it and the main

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                     <!-- /upcoming -->
                 </div>
             </section>
+            <!-- /#to_do_list -->
         </main>
     </body>
 </html>
